# fpl-players-crawler

./: .env  Cargo.toml
prisma/: schema.prisma
src/: database.rs  fpl_service.rs  main.rs
