[package]
name = "fpl-players-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
futures = "0.3.29"
rand = "0.8.5"
